rustdocs/errors/rust-bitcoin-bitcoin-examples-create-p2wpkh-address.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/bitcoin/examples/create-p2wpkh-address.rs:1:5
  |
1 | use bitcoin::secp256k1::rand;
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error[E0432]: unresolved import `bitcoin`
 --> ../rust-bitcoin/bitcoin/examples/create-p2wpkh-address.rs:2:5
  |
2 | use bitcoin::{Address, CompressedPublicKey, Network, PrivateKey};
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
